# lfs-testing-demo

./: README.md  pyproject.toml
features/: calculator.feature  engine.feature
features/steps/: calculator.py  engine.py
src/: calculator.css  calculator.py  engine.py
tests/: conftest.py  test_calculator.py  test_calculator_ui.py  test_end_to_end.py  test_engine.py
