[tool.poetry]
authors = ["Jim Pfleger <jim.pfleger@verizon.com>"]
description = "Toy app to demonstrate test techniques for Learning Futures Studio associates."
name = "lfs-testing-demo"
packages = [{include = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
transitions = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.7.7"
black = "^22.10.0"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
