[tool.poetry]
authors = ["Jim Pfleger <jim.pfleger@verizon.com>"]
description = "Toy app to demonstrate test techniques for Learning Futures Studio associates."
name = "lfs-testing-demo"
packages = [{include = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
transitions = "^0.9.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.7"
black = "^22.10.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "--cov",
  "src",
  "--cov-report",
  "xml:coverage.xml",
  "--cov-report",
  "html:htmlcov",
]
pythonpath = "src"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
